syntax = "proto3";

package intr.v1;
option  go_package="intr/v1;intrv1";

service InteractiveRepository {
    rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
    rpc BatchIncrReadCnt(BatchIncrReadCntRequest) returns (BatchIncrReadCntResponse);
    rpc IncrLike(IncrLikeRequest) returns (IncrLikeResponse);
    rpc DecrLike(DecrLikeRequest) returns (DecrLikeResponse);
    rpc AddCollectionItem(AddCollectionItemRequest) returns (AddCollectionItemResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Liked(LikedRequest) returns (LikedResponse);
    rpc Collected(CollectedRequest) returns (CollectedResponse);
    rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
}

message IncrReadCntRequest {
  string biz = 1;
  int64 biz_id = 2;
}

message IncrReadCntResponse {

}

message BatchIncrReadCntRequest {
  repeated string biz = 1;
  repeated int64 biz_id = 2;
}

message BatchIncrReadCntResponse {

}

message IncrLikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message IncrLikeResponse {

}

message DecrLikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message DecrLikeResponse {

}

message AddCollectionItemRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 cid = 3;
  int64 uid = 4;
}

message AddCollectionItemResponse {

}

message GetRequest {
  string biz = 1;
  int64 biz_id = 2;
}

message GetResponse {
  Interactive intr = 1;
}

message Interactive {
  string biz = 1;
  int64 biz_id = 2;
  int64 read_cnt = 3;
  int64 like_cnt = 4;
  int64 collect_cnt = 5;
  bool liked = 6;
  bool collected = 7;
}

message LikedRequest {
  string biz = 1;
  int64 id = 2;
  int64 uid = 3;
}

message LikedResponse {
  bool bool = 1;
}

message CollectedRequest {
  string biz = 1;
  int64 id = 2;
  int64 uid = 3;
}

message CollectedResponse {
  bool bool = 1;
}

message GetByIdsRequest {
  string biz = 1;
  repeated int64 ids = 2;
}

message GetByIdsResponse {
  repeated Interactive intrs = 1;
}
